--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Stone Sparkes"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "I love to code, sometimes I hate it when the only problme is a semicolon.."
+  location         : "Miami, FL"
+  employer         : "University of Miami"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "stonessparkes@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
